<resources>
    <string name="app_name">TrackEat</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="namaLengkap">Nama Lengkap</string>
    <string name="tanggalLahir">Tanggal Lahir</string>
    <string name="jenisKelamin">Jenis Kelamin</string>
    <string name="lakilaki">Laki-Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="tinggiBadan">Tinggi Badan</string>
    <string name="beratBadan">Berat Badan</string>
    <string name="confirmPassword">Konfirmasi Password</string>
    <string name="register">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="api_key">bF13-CTJZEi1ZtEYwrLe4E4sXII13Hrbj1S3bsdGELXJ</string>
    <string name="usia">Usia</string>
    <string name="namaMakanan">Nama Makanan</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="kalori">Kalori</string>
    <string name="namaKatering">Nama Katering</string>
    <string name="greetings">Hai, %1s !</string>
</resources>
