<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_selector"
    tools:context=".RegisterActivity">

    <!--<ImageView-->
    <!--android:id="@+id/imageViewLogo"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="30dp"-->
    <!--android:src="@drawable/trackeat_logo"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="parent"-->
    <!--tools:ignore="ContentDescription" />-->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutNamaLengkap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="43dp"
        android:textColorHint="#D9FFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextNamaLengkap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/namaLengkap"
            android:inputType="textCapWords"
            android:textColor="@color/md_white_1000" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        android:textColorHint="#D9FFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutNamaLengkap">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/md_white_1000" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutTanggalLahir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        android:textColorHint="#D9FFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmail">

        <EditText
            android:id="@+id/editTextTanggalLahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tanggalLahir"
            android:inputType="date"
            android:textColor="@color/md_white_1000" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayoutJenisKelamin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="47dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutTanggalLahir">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewJenisKelamin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jenisKelamin"
                android:textColor="#BFFFFF"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/radioGroupJenisKelamin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radioButtonLakiLaki"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/lakilaki"
                    android:textColor="@color/md_white_1000"
                    app:buttonTint="@color/md_white_1000" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radioButtonPerempuan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/perempuan"
                    android:textColor="@color/md_white_1000"
                    app:buttonTint="@color/md_white_1000" />

            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutTinggiBeratBadan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/linearLayoutJenisKelamin"
        app:layout_constraintStart_toStartOf="@id/linearLayoutJenisKelamin"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutJenisKelamin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutTinggiBadan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:textColorHint="#D9FFFF">

            <EditText
                android:id="@+id/editTextTinggiBadan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tinggiBadan"
                android:inputType="number"
                android:textColor="@color/md_white_1000" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutBeratBadan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColorHint="#D9FFFF">

            <EditText
                android:id="@+id/editTextBeratBadan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/beratBadan"
                android:inputType="number"
                android:textColor="@color/md_white_1000" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutKonfirmasiPassword">

        <Button
            android:id="@+id/buttonRegister"
            style="@style/AppTheme.RoundedCornerMaterialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="47dp"
            android:layout_marginEnd="47dp"
            android:layout_marginBottom="8dp"
            android:minHeight="42dip"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sudah punya akun?"
            android:textColor="#BFFFFFFF"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif-medium"
            android:text="Login"
            android:textColor="@color/md_white_1000"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        android:textColorHint="#D9FFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutTinggiBeratBadan">

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/md_white_1000" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutKonfirmasiPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        android:textColorHint="#D9FFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutPassword">

        <EditText
            android:id="@+id/editTextKonfirmasiPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:textColor="@color/md_white_1000" />

    </android.support.design.widget.TextInputLayout>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/aviLoadingIndicatorView"
        style="@style/AVLoadingIndicatorView.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:indicatorColor="@color/md_white_1000"
        app:indicatorName="BallPulseIndicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutRegister" />

</android.support.constraint.ConstraintLayout>