<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        app:cardBackgroundColor="@color/md_white_1000"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewThumbnail"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:scaleType="centerCrop"
                android:src="@drawable/default_image_not_set"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="4dp">

                <TextView
                    android:id="@+id/textViewFoodName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/namaMakanan"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewCateringName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/namaKatering"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/textViewCalorie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/kalori"
                    android:textColor="#555" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewHarga"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:paddingStart="16dp"
                    android:text="Rp25.000"
                    android:textColor="@color/md_orange_700"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="12dp">

                    <Button
                        android:id="@+id/buttonDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Detail"
                        android:textAllCaps="false"
                        android:theme="@style/PrimaryFlatButton"
                        tools:ignore="ButtonStyle,HardcodedText" />

                    <Button
                        android:id="@+id/buttonBuy"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Beli"
                        android:textAllCaps="false"
                        tools:ignore="HardcodedText" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>